src/kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-worlds
  labels:
    name: hello-worlds
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  labels:
    app: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chart-example.com
      secretName: hello-world-test
  rules:
    - host: chart-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: phillrog/py-hello:latest       
        imagePullPolicy: Always
        ports:
        - containerPort: 8080        
      imagePullSecrets:
      - name: regcred
